{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 34,
  "lineage": "28b8e46b-192d-81f7-3bb2-fae942d948b5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cloudguardian_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/networkInterfaces/nic-cloudguardian-web",
            "internal_domain_name_suffix": "qrnkflf4mgzurgrxpbyol0nbba.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/publicIPAddresses/pip-cloudguardian-dev",
                "subnet_id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudguardian-dev/subnets/subnet-cloudguardian-dev"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "60-45-BD-72-E5-A2",
            "name": "nic-cloudguardian-web",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-cloudguardian-dev",
            "virtual_machine_id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Compute/virtualMachines/vm-cloudguardian-web"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-cloudguardian-web",
            "resource_group_name": "rg-cloudguardian-dev",
            "subscription_id": "7573a241-c33d-4d26-ba06-e07aaa7056c2"
          },
          "dependencies": [
            "azurerm_public_ip.cloudguardian_public_ip",
            "azurerm_resource_group.cloudguardian",
            "azurerm_subnet.cloudguardian_subnet",
            "azurerm_virtual_network.cloudguardian_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cloudguardian_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-cloudguardian-dev",
            "location": "centralindia",
            "name": "nsg-cloudguardian-dev",
            "resource_group_name": "rg-cloudguardian-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-From-Internet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP-From-Internet",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-cloudguardian-dev",
            "resource_group_name": "rg-cloudguardian-dev",
            "subscription_id": "7573a241-c33d-4d26-ba06-e07aaa7056c2"
          },
          "dependencies": [
            "azurerm_resource_group.cloudguardian"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http_from_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-cloudguardian-dev/securityRules/Allow-HTTP-From-Internet",
            "name": "Allow-HTTP-From-Internet",
            "network_security_group_name": "nsg-cloudguardian-dev",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-cloudguardian-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTP-From-Internet",
            "network_security_group_name": "nsg-cloudguardian-dev",
            "resource_group_name": "rg-cloudguardian-dev",
            "subscription_id": "7573a241-c33d-4d26-ba06-e07aaa7056c2"
          },
          "dependencies": [
            "azurerm_network_security_group.cloudguardian_nsg",
            "azurerm_resource_group.cloudguardian"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh_from_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-cloudguardian-dev/securityRules/Allow-SSH-From-Internet",
            "name": "Allow-SSH-From-Internet",
            "network_security_group_name": "nsg-cloudguardian-dev",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-cloudguardian-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-SSH-From-Internet",
            "network_security_group_name": "nsg-cloudguardian-dev",
            "resource_group_name": "rg-cloudguardian-dev",
            "subscription_id": "7573a241-c33d-4d26-ba06-e07aaa7056c2"
          },
          "dependencies": [
            "azurerm_network_security_group.cloudguardian_nsg",
            "azurerm_resource_group.cloudguardian"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "cloudguardian_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/publicIPAddresses/pip-cloudguardian-dev",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.197.26.85",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-cloudguardian-dev",
            "resource_group_name": "rg-cloudguardian-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-cloudguardian-dev",
            "resource_group_name": "rg-cloudguardian-dev",
            "subscription_id": "7573a241-c33d-4d26-ba06-e07aaa7056c2"
          },
          "dependencies": [
            "azurerm_resource_group.cloudguardian"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cloudguardian_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudguardian-dev/subnets/subnet-db-cloudguardian-dev",
            "name": "subnet-db-cloudguardian-dev",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-cloudguardian-dev",
            "virtual_network_name": "vnet-cloudguardian-dev"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-db-cloudguardian-dev",
            "resource_group_name": "rg-cloudguardian-dev",
            "subscription_id": "7573a241-c33d-4d26-ba06-e07aaa7056c2",
            "virtual_network_name": "vnet-cloudguardian-dev"
          },
          "dependencies": [
            "azurerm_resource_group.cloudguardian",
            "azurerm_virtual_network.cloudguardian_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cloudguardian_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudguardian-dev/subnets/subnet-cloudguardian-dev",
            "name": "subnet-cloudguardian-dev",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-cloudguardian-dev",
            "virtual_network_name": "vnet-cloudguardian-dev"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-cloudguardian-dev",
            "resource_group_name": "rg-cloudguardian-dev",
            "subscription_id": "7573a241-c33d-4d26-ba06-e07aaa7056c2",
            "virtual_network_name": "vnet-cloudguardian-dev"
          },
          "dependencies": [
            "azurerm_resource_group.cloudguardian",
            "azurerm_virtual_network.cloudguardian_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "cloudguardian_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudguardian-dev/subnets/subnet-cloudguardian-dev",
            "network_security_group_id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-cloudguardian-dev",
            "subnet_id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudguardian-dev/subnets/subnet-cloudguardian-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.cloudguardian_nsg",
            "azurerm_resource_group.cloudguardian",
            "azurerm_subnet.cloudguardian_subnet",
            "azurerm_virtual_network.cloudguardian_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "cloudguardian_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "aca25a84-61be-48b3-9a37-7870e5e9a108",
            "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudguardian-dev",
            "location": "centralindia",
            "name": "vnet-cloudguardian-dev",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-cloudguardian-dev",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudguardian-dev/subnets/subnet-cloudguardian-dev",
                "name": "subnet-cloudguardian-dev",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-cloudguardian-dev"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/7573a241-c33d-4d26-ba06-e07aaa7056c2/resourceGroups/rg-cloudguardian-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudguardian-dev/subnets/subnet-db-cloudguardian-dev",
                "name": "subnet-db-cloudguardian-dev",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-cloudguardian-dev",
            "resource_group_name": "rg-cloudguardian-dev",
            "subscription_id": "7573a241-c33d-4d26-ba06-e07aaa7056c2"
          },
          "dependencies": [
            "azurerm_resource_group.cloudguardian"
          ]
        }
      ]
    }
  ]
}